fix: change gap of the bars

--- a/app/vmui/packages/vmui/src/components/Chart/SimpleBarChart/style.scss
+++ b/app/vmui/packages/vmui/src/components/Chart/SimpleBarChart/style.scss
@@ -45,7 +45,7 @@ $color-bar-highest: #F79420;
     display: flex;
     align-items: flex-end;
     justify-content: space-between;
-    gap: 1px;
+    gap: 1%;
 
     &-item {
       display: flex;
